--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -6,6 +6,7 @@
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
     transition: transform .3s;
+    backface-visibility: hidden;
 
     &__icon {
         font-size: 6rem;
@@ -17,6 +18,6 @@
     }
 
     &:hover {
-        transform: translateY(-1.5rem) scale(1.03);
+        transform: translateY(-1.5rem) scale(1.1);
     }
 }
