--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -15,6 +15,7 @@ $color-grey-light-2: #eeeeee;
 
 $color-grey-dark: #777777;
 $color-grey-dark-2: #999;
+$color-grey-dark-3: #333;
 
 $color-white: #ffffff;
 $color-black: #000000;
