--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+/*
+$breakpoint argument choices
+- phone
+- tab-port
+- tab-land
+- big-dektop
+*/
 @keyframes moveInLeft {
   0% {
     opacity: 0;
@@ -36,6 +43,15 @@
 html {
   font-size: 62.5%;
   scroll-behavior: smooth; }
+  @media (max-width: 75em) {
+    html {
+      font-size: 56.25%; } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
+  @media (min-width: 112.5em) {
+    html {
+      font-size: 75%; } }
 
 body {
   box-sizing: border-box; }
