--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -8,6 +8,10 @@
     transition: transform .3s;
     backface-visibility: hidden;
 
+    @include respond(tab-port) {
+        padding: 2rem;
+    }
+
     &__icon {
         font-size: 6rem;
         margin-bottom: 0.5rem;
@@ -15,6 +19,10 @@
         background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
         -webkit-background-clip: text;
         color: transparent;
+
+        @include respond(tab-port) {
+            margin-bottom: 0;
+        }
     }
 
     &:hover {
